# sisttema-de-analise-de-dados

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  BETA-LAUNCH.md  BRANCH_STRATEGY.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTINUE.md  CONTRIBUTING.md  DEPLOY-FREE.md  DOCKER.md  Dockerfile  INCIDENT-RESPONSE.md  Makefile  PLANO-LANDING-PAGE.md  PLANO-SAAS.md  PROJECT_STRUCTURE.md  README.md  RELATORIO_ANALISE_TECNICA.md  RELEASE_NOTES_v1.0.md  SECURITY.md  SPRINTS_MELHORIAS.md  apresentacao-iga.html  build-installer.bat  build-windows.bat  docker-compose.yml  fly.toml  package-lock.json  package.json  render.yaml  turbo.json
.claude/: README.md  settings.json  settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
back-end-gest-o/: .env.example  .gitignore  package-lock.json  package.json
desktop-app/: INSTALL_CLIENTE.md  README.md  installer-electron.iss  main.mjs  package-lock.json  package.json  splash.html  updater.mjs
services/ai/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
services/ai/iga_ai/: __init__.py  config.py  main.py
services/ai/iga_ai/agents/: copilot.py  prompts.py  providers.py  tools.py
services/ai/iga_ai/eval/: cases.yaml  runner.py
services/ai/iga_ai/rag/: embeddings.py  indexer.py  retriever.py
services/ai/iga_ai/routes/: chat.py  health.py
services/ai/iga_ai/tools/: client.py
services/ai/tests/: conftest.py
services/ai/tests/unit/: test_auth.py  test_health.py  test_prompts.py  test_tools_definitions.py
(+847 files in other folders)
