[project]
name = "iga-ai"
version = "0.1.0"
description = "IGA Gestao IA microservice — Python FastAPI agent with Pydantic AI + RAG"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sse-starlette>=2.1.3",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "pydantic-ai>=0.0.13",
  "openai>=1.54.0",
  "anthropic>=0.39.0",
  "httpx>=0.27.0",
  "asyncpg>=0.29.0",
  "pgvector>=0.3.5",
  "pyjwt[crypto]>=2.9.0",
  "structlog>=24.4.0",
  "sentry-sdk[fastapi]>=2.18.0",
  "tenacity>=9.0.0",
  "python-multipart>=0.0.12",
  "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "types-pyyaml>=6.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iga_ai"]
